manifests/platform/loki/app/base/httproute-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-push-internal
  namespace: loki
spec:
  parentRefs:
    - name: internal-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - loki-push.${CLUSTER_INTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
